--- a/package.json
+++ b/package.json
@@ -5,8 +5,41 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "aws-sdk": "^2.138.0",
     "babel-runtime": "^6.26.0",
-    "meteor-node-stubs": "^0.3.2"
+    "bcrypt": "^1.0.3",
+    "blueimp-canvas-to-blob": "^3.14.0",
+    "blueimp-file-upload": "^9.19.2",
+    "blueimp-load-image": "^2.17.1",
+    "bootstrap": "^3.3.7",
+    "connect-route": "^0.1.5",
+    "cron": "^1.3.0",
+    "debounce": "^1.1.0",
+    "draft-js": "^0.10.4",
+    "draft-js-image-plugin": "^2.0.1",
+    "draftjs-to-html": "^0.8.1",
+    "fb": "^2.0.0",
+    "jquery": "^3.2.1",
+    "meteor-node-stubs": "~0.2.4",
+    "moment": "^2.19.2",
+    "path": "^0.12.7",
+    "react": "^16.0.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^0.31.5",
+    "react-datepicker": "^0.60.2",
+    "react-dates": "^15.3.0",
+    "react-dom": "^16.0.0",
+    "react-draft-wysiwyg": "^1.12.2",
+    "react-dropdown": "^1.3.2",
+    "react-helmet": "^5.2.0",
+    "react-image-gallery": "^0.8.6",
+    "react-router": "3",
+    "react-sortable-hoc": "^0.6.8",
+    "react-time-input": "^0.0.17",
+    "request": "^2.83.0",
+    "simpl-schema": "^0.5.0",
+    "sweetalert2": "^7.3.5",
+    "uuid": "^3.1.0"
   },
   "version": "1.0.0",
   "main": "index.js",
