--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "draftjs-to-html": "^0.8.1",
     "fb": "^2.0.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.19.2",
     "path": "^0.12.7",
@@ -33,6 +34,7 @@
     "react-dropdown": "^1.3.2",
     "react-helmet": "^5.2.0",
     "react-image-gallery": "^0.8.6",
+    "react-reorder": "2.2.1",
     "react-router": "3",
     "react-sortable-hoc": "^0.6.8",
     "react-time-input": "^0.0.17",
