--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.19.2",
     "path": "^0.12.7",
+    "rc-switch": "^1.6.0",
     "react": "^16.0.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^0.31.5",
