--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.0.0",
     "react-draft-wysiwyg": "^1.12.2",
     "react-dropdown": "^1.3.2",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0",
     "react-image-gallery": "^0.8.6",
     "react-reorder": "2.2.1",
